[tool.poetry]
name = "mlfromscratch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
pandas = "^2.1.0"
matplotlib = "^3.7.2"
nnfs = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
